--- a/package.json
+++ b/package.json
@@ -17,14 +17,26 @@
   },
   "dependencies": {
     "@angular/animations": "~10.1.0",
+    "@angular/cdk": "^10.2.0",
     "@angular/common": "~10.1.0",
     "@angular/compiler": "~10.1.0",
     "@angular/core": "~10.1.0",
+    "@angular/fire": "^6.0.2",
     "@angular/forms": "~10.1.0",
+    "@angular/material": "^10.2.0",
     "@angular/platform-browser": "~10.1.0",
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/router": "~10.1.0",
+    "@firebase/app": "^0.6.10",
+    "@firebase/app-types": "^0.6.1",
+    "@firebase/firestore": "^1.16.6",
+    "@ngrx/effects": "^10.0.0",
+    "@ngrx/router-store": "^10.0.0",
+    "@ngrx/store": "^10.0.0",
+    "@ngrx/store-devtools": "^10.0.0",
     "express": "^4.17.1",
+    "firebase": "^7.19.1",
+    "material-icons": "^0.3.1",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
